--- a/KokoaTalk/home.html
+++ b/KokoaTalk/home.html
@@ -7,11 +7,13 @@
         <title>Document</title>
     </head>
     <body>
-        <h1>Hello this is my website!</h1>
-        <h2>Hello this is my website!</h2>
-        <h3>Hello this is my website!</h3>
-        <h4>Hello this is my website!</h4>
-        <h5>Hello this is my website!</h5>
-        <h6>Hello this is my website!</h6>
+        <form>
+            <input type="file" accept=".png,.pdf" />
+            <input placeholder="Name" type="text" />
+            <input placeholder="Last Name" type="text" />
+            <input placeholder="Username" type="text" />
+            <input placeholder="Password" minlength="10" type="password" />
+            <input type="submit" value="Create Account" />
+        </form>
     </body>
 </html>
