--- a/KokoaTalk/home.html
+++ b/KokoaTalk/home.html
@@ -8,11 +8,8 @@
     </head>
     <body>
         <form>
-            <input type="file" accept=".png,.pdf" />
-            <input placeholder="Name" type="text" />
-            <input placeholder="Last Name" type="text" />
-            <input placeholder="Username" type="text" />
-            <input placeholder="Password" minlength="10" type="password" />
+            <label for="website">First Name</label>
+            <input id="website" placeholder="Name" type="date" />
             <input type="submit" value="Create Account" />
         </form>
     </body>
