--- a/KokoaTalk/home.html
+++ b/KokoaTalk/home.html
@@ -4,13 +4,17 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>Home - My first website.</title>
     </head>
     <body>
-        <form>
-            <label for="website">First Name</label>
-            <input id="website" placeholder="Name" type="date" />
-            <input type="submit" value="Create Account" />
-        </form>
+        <header>
+            <h1>asdasd</h1>
+        </header>
+        <main>
+            <address>123 Road Altavista</address>
+            <p>hello!</p>
+            <span>hello!</span>
+        </main>
+        <footer>&copy; 2020 N.C</footer>
     </body>
 </html>
