--- a/KokoaTalk/index.html
+++ b/KokoaTalk/index.html
@@ -15,14 +15,11 @@
             body {
                 background-color: thistle;
                 /* margin: 0; */
-                margin-top: 20px;
-                margin-left: 10px;
-                margin-right: 5px;
-                margin-bottom: 10px;
+                margin: 0;
             }
 
             .div {
-                margin-left: 50px;
+                margin: 80px 15px;
                 height: 150px;
                 width: 150px;
                 background-color: white;
@@ -37,4 +34,7 @@
 
 <!--
     margin = box의 border(경계)의 바깥에 있는 공간
+    margin: x; = 상하좌우 모두 젹용
+    margin: x x; = 상하 좌우
+    margin x x x x; 위 오 아 왼
 -->
