--- a/KokoaTalk/home.html
+++ b/KokoaTalk/home.html
@@ -4,16 +4,36 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Home - My first website.</title>
+        <link rel="stylesheet" href="styles.css" />
+        <title>Home - My first website</title>
+
+        <style>
+            html {
+                background-color: tomato;
+            }
+
+            body {
+                background-color: thistle;
+                padding: 20px;
+                margin: 0;
+            }
+
+            .div {
+                height: 150px;
+                width: 150px;
+                background-color: white;
+            }
+        </style>
     </head>
+
     <body>
-        <header>
-            <h1>asdasd</h1>
-        </header>
-        <main>
-            <address>123 Road Altavista</address>
-            
-        </main> 
-        <footer>&copy; 2020 N.C</footer>
+        <div class="div"></div>
     </body>
 </html>
+
+<!--
+    margin = box의 border(경계)의 바깥에 있는 공간
+    margin: x; = 상하좌우 모두 젹용
+    margin: x x; = 상하 좌우
+    margin x x x x; 위 오 아 왼
+-->
