--- a/KokoaTalk/home.html
+++ b/KokoaTalk/home.html
@@ -15,19 +15,47 @@
             body {
                 background-color: thistle;
                 padding: 20px;
-                margin: 0;
+                margin: 20px;
             }
 
-            .div {
-                height: 150px;
+            div {
+                padding: 10px;
+            }
+
+            #first {
+                background-color: whitesmoke;
                 width: 150px;
-                background-color: white;
+                height: 150px;
+            }
+
+            #second {
+                background-color: teal;
+                width: 100px;
+                height: 100px;
+            }
+
+            #thrid {
+                background-color: wheat;
+                width: 50px;
+                height: 50px;
+            }
+
+            #fourth {
+                background-color: blanchedalmond;
+                width: 25px;
+                height: 25px;
             }
         </style>
     </head>
 
     <body>
-        <div class="div"></div>
+        <div id="first">
+            <div id="second">
+                <div id="thrid">
+                    <div id="fourth"></div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
 
