--- a/KokoaTalk/home.html
+++ b/KokoaTalk/home.html
@@ -18,7 +18,7 @@
                 margin: 20px;
             }
 
-            div {
+            .box {
                 padding: 10px;
             }
 
@@ -49,10 +49,10 @@
     </head>
 
     <body>
-        <div id="first">
-            <div id="second">
-                <div id="thrid">
-                    <div id="fourth"></div>
+        <div class="box" id="first">
+            <div class="box" id="second">
+                <div class="box" id="thrid">
+                    <div class="box" id="fourth"></div>
                 </div>
             </div>
         </div>
