--- a/KokoaTalk/home.html
+++ b/KokoaTalk/home.html
@@ -8,6 +8,10 @@
         <title>Home - My first website</title>
 
         <style>
+            * {
+                border: 1px dashed black;
+            }
+
             html {
                 background-color: tomato;
             }
@@ -19,7 +23,7 @@
             }
 
             .box {
-                padding: 10px;
+                padding: 20px;
             }
 
             #first {
@@ -40,10 +44,8 @@
                 height: 50px;
             }
 
-            #fourth {
-                background-color: blanchedalmond;
-                width: 25px;
-                height: 25px;
+            span {
+                border-style: dotted;
             }
         </style>
     </head>
@@ -52,7 +54,7 @@
         <div class="box" id="first">
             <div class="box" id="second">
                 <div class="box" id="thrid">
-                    <div class="box" id="fourth"></div>
+                    <span>hello</span>
                 </div>
             </div>
         </div>
