--- a/KokoaTalk/home.html
+++ b/KokoaTalk/home.html
@@ -8,56 +8,37 @@
         <title>Home - My first website</title>
 
         <style>
-            * {
-                border: 1px dashed black;
-            }
-
-            html {
-                background-color: tomato;
-            }
-
             body {
-                background-color: thistle;
-                padding: 20px;
-                margin: 20px;
-            }
-
-            .box {
-                padding: 20px;
-            }
-
-            #first {
-                background-color: whitesmoke;
-                width: 150px;
-                height: 150px;
-            }
-
-            #second {
-                background-color: teal;
-                width: 100px;
-                height: 100px;
-            }
-
-            #thrid {
-                background-color: wheat;
-                width: 50px;
-                height: 50px;
+                margin-top: 20px;
             }
 
             span {
-                border-style: dotted;
+            }
+
+            .btn {
+                padding: 5px 10px;
+                border-radius: 5px;
+            }
+
+            .tomato {
+                background-color: tomato;
+                color: white;
+            }
+
+            .teal {
+                background-color: teal;
             }
         </style>
     </head>
 
     <body>
-        <div class="box" id="first">
-            <div class="box" id="second">
-                <div class="box" id="thrid">
-                    <span>hello</span>
-                </div>
-            </div>
-        </div>
+        <span class="btn teal">hello</span>
+        <span class="btn tomato">hello</span>
+        <span class="btn teal">hello</span>
+        <span class="btn tomato">hello</span>
+        <span class="btn teal">hello</span>
+        <span class="btn tomato">hello</span>
+        <span class="btn teal">hello</span>
     </body>
 </html>
 
