--- a/KokoaTalk/home.html
+++ b/KokoaTalk/home.html
@@ -12,33 +12,21 @@
                 margin-top: 20px;
             }
 
-            span {
-            }
-
-            .btn {
-                padding: 5px 10px;
-                border-radius: 5px;
-            }
-
-            .tomato {
-                background-color: tomato;
-                color: white;
-            }
-
-            .teal {
+            div {
+                display: inline-block;
+                width: 50px;
+                height: 50px;
                 background-color: teal;
             }
         </style>
     </head>
 
     <body>
-        <span class="btn teal">hello</span>
-        <span class="btn tomato">hello</span>
-        <span class="btn teal">hello</span>
-        <span class="btn tomato">hello</span>
-        <span class="btn teal">hello</span>
-        <span class="btn tomato">hello</span>
-        <span class="btn teal">hello</span>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
     </body>
 </html>
 
