--- a/KokoaTalk/home.html
+++ b/KokoaTalk/home.html
@@ -9,30 +9,28 @@
 
         <style>
             body {
-                margin-top: 20px;
+                margin: 20px;
+                display: flex;
+                justify-content: space-between;
+                height: 100vh;
+                align-items: center;
             }
 
-            div {
-                display: inline-block;
-                width: 50px;
-                height: 50px;
+            span {
+                width: 300px;
+                height: 300px;
                 background-color: teal;
+            }
+
+            #second {
+                background-color: antiquewhite;
             }
         </style>
     </head>
 
     <body>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <span></span>
+        <span id="second"></span>
+        <span></span>
     </body>
 </html>
-
-<!--
-    margin = box의 border(경계)의 바깥에 있는 공간
-    margin: x; = 상하좌우 모두 젹용
-    margin: x x; = 상하 좌우
-    margin x x x x; 위 오 아 왼
--->
