--- a/KokoaTalk/home.html
+++ b/KokoaTalk/home.html
@@ -14,12 +14,19 @@
                 justify-content: space-between;
                 height: 100vh;
                 align-items: center;
+                flex-direction: row-reverse;
+                flex-wrap: wrap-reverse;
             }
 
             span {
                 width: 300px;
                 height: 300px;
                 background-color: teal;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                font-size: 30px;
+                color: white;
             }
 
             #second {
@@ -29,8 +36,8 @@
     </head>
 
     <body>
-        <span></span>
-        <span id="second"></span>
-        <span></span>
+        <span>1</span>
+        <span id="second">2</span>
+        <span>3</span>
     </body>
 </html>
