--- a/KokoaTalk/home.html
+++ b/KokoaTalk/home.html
@@ -9,35 +9,28 @@
 
         <style>
             body {
+                height: 1000vh;
                 margin: 20px;
-                display: flex;
-                justify-content: space-between;
-                height: 100vh;
-                align-items: center;
-                flex-direction: row-reverse;
-                flex-wrap: wrap-reverse;
             }
 
-            span {
+            div {
                 width: 300px;
                 height: 300px;
-                background-color: teal;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                font-size: 30px;
                 color: white;
             }
+            #green {
+                background-color: teal;
+                position: fixed;
+            }
 
-            #second {
-                background-color: antiquewhite;
+            #different {
+                background-color: wheat;
             }
         </style>
     </head>
 
     <body>
-        <span>1</span>
-        <span id="second">2</span>
-        <span>3</span>
+        <div id="green"></div>
+        <div id="different"></div>
     </body>
 </html>
