--- a/KokoaTalk/home.html
+++ b/KokoaTalk/home.html
@@ -16,21 +16,23 @@
             div {
                 width: 300px;
                 height: 300px;
-                color: white;
-            }
-            #green {
-                background-color: teal;
-                position: fixed;
+                background-color: wheat;
+                position: relative;
             }
 
-            #different {
-                background-color: wheat;
+            .green {
+                background-color: teal;
+                height: 100px;
+                position: absolute;
+                right: 0;
+                width: 100px;
             }
         </style>
     </head>
 
     <body>
-        <div id="green"></div>
-        <div id="different"></div>
+        <div>
+            <div class="green"></div>
+        </div>
     </body>
 </html>
