--- a/KokoaTalk/home.html
+++ b/KokoaTalk/home.html
@@ -24,7 +24,8 @@
                 background-color: teal;
                 height: 100px;
                 position: absolute;
-                right: 0;
+                right: 0px;
+                top: 0px;
                 width: 100px;
             }
         </style>
