--- a/KokoaTalk/home.html
+++ b/KokoaTalk/home.html
@@ -14,26 +14,26 @@
             }
 
             div {
-                width: 300px;
-                height: 300px;
+                width: 150px;
+                height: 150px;
                 background-color: wheat;
                 position: relative;
             }
 
-            .green {
+            div:first-child {
+                background-color: tomato;
+            }
+
+            div:last-child {
                 background-color: teal;
-                height: 100px;
-                position: absolute;
-                right: 0px;
-                top: 0px;
-                width: 100px;
             }
         </style>
     </head>
 
     <body>
-        <div>
-            <div class="green"></div>
-        </div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
     </body>
 </html>
