--- a/KokoaTalk/home.html
+++ b/KokoaTalk/home.html
@@ -13,27 +13,24 @@
                 margin: 20px;
             }
 
-            div {
-                width: 150px;
-                height: 150px;
-                background-color: wheat;
-                position: relative;
-            }
-
-            div:first-child {
+            span {
                 background-color: tomato;
             }
 
-            div:last-child {
+            span:nth-child(even) {
                 background-color: teal;
             }
         </style>
     </head>
 
     <body>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <span>hello</span>
+        <span>hello</span>
+        <span>hello</span>
+        <span>hello</span>
+        <span>hello</span>
+        <span>hello</span>
+        <span>hello</span>
+        <span>hello</span>
     </body>
 </html>
