--- a/KokoaTalk/home.html
+++ b/KokoaTalk/home.html
@@ -14,23 +14,32 @@
             }
 
             span {
-                background-color: tomato;
+                background-color: yellowgreen;
+                padding: 5px;
+                border-radius: 10px;
+                text-decoration: underline;
             }
 
-            span:nth-child(even) {
-                background-color: teal;
+            p span {
+                color: white;
+            }
+
+            p > span {
+                text-decoration: underline;
             }
         </style>
     </head>
 
     <body>
-        <span>hello</span>
-        <span>hello</span>
-        <span>hello</span>
-        <span>hello</span>
-        <span>hello</span>
-        <span>hello</span>
-        <span>hello</span>
-        <span>hello</span>
+        <div>
+            <span>hello</span>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim
+                reiciendis numquam aliquam modi. Incidunt impedit quas magnam
+                dolorum natus perspiciatis ipsum quae. Expedita pariatur
+                aspernatur velit excepturi non similique officia.
+            </p>
+            <span>inside</span>
+        </div>
     </body>
 </html>
