--- a/KokoaTalk/home.html
+++ b/KokoaTalk/home.html
@@ -17,14 +17,13 @@
                 background-color: yellowgreen;
                 padding: 5px;
                 border-radius: 10px;
-                text-decoration: underline;
             }
 
             p span {
                 color: white;
             }
 
-            p > span {
+            p ~ span {
                 text-decoration: underline;
             }
         </style>
@@ -39,7 +38,8 @@
                 dolorum natus perspiciatis ipsum quae. Expedita pariatur
                 aspernatur velit excepturi non similique officia.
             </p>
-            <span>inside</span>
+            <address>hi</address>
+            <span>hello</span>
         </div>
     </body>
 </html>
