--- a/KokoaTalk/home.html
+++ b/KokoaTalk/home.html
@@ -13,14 +13,15 @@
                 background-color: tomato;
                 text-decoration: none;
                 padding: 3px 5px;
-                border-radius: 10px;
+                border-radius: 5px;
                 font-size: 55px;
-                transition: all 5s ease-in-out;
+                transition: color 1s cubic-bezier(0.6, 0, 0.735, 0.045),
+                    border-radius 5s ease-in-out, background-color 10s ease-out;
             }
 
             a:hover {
-                border-radius: 15px;
                 color: tomato;
+                border-radius: 20px;
                 background-color: wheat;
             }
         </style>
