--- a/KokoaTalk/home.html
+++ b/KokoaTalk/home.html
@@ -8,26 +8,22 @@
         <title>Home - My first website</title>
 
         <style>
-            a {
-                color: wheat;
-                background-color: tomato;
-                text-decoration: none;
-                padding: 3px 5px;
-                border-radius: 5px;
-                font-size: 55px;
-                transition: color 1s cubic-bezier(0.6, 0, 0.735, 0.045),
-                    border-radius 5s ease-in-out, background-color 10s ease-out;
+            img {
+                border: 1px solid black;
+                border-radius: 50%;
+                /* transform: rotateY(85deg) rotateX(20deg) rotateZ(30deg);
+                transform: scale(2, 2);
+                transform: translateX(100px); */
+                transition: transform 2s ease-in-out;
             }
 
-            a:hover {
-                color: tomato;
-                border-radius: 20px;
-                background-color: wheat;
+            img:hover {
+                transform: matrix(1, 2, 3, 4, 5, 6);
             }
         </style>
     </head>
 
     <body>
-        <a href="#">Go home</a>
+        <img src="img/logo.PNG" alt="" />
     </body>
 </html>
