--- a/KokoaTalk/home.html
+++ b/KokoaTalk/home.html
@@ -8,18 +8,39 @@
         <title>Home - My first website</title>
 
         <style>
+            body {
+                display: flex;
+                justify-content: center;
+                height: 100vh;
+                align-items: center;
+            }
             @keyframes coinFlip {
-                from {
-                    transform: rotateX(0);
+                0% {
+                    transform: rotateY(0);
                 }
-                to {
-                    transform: rotateX(180deg) translateX(100px);
+                25% {
+                    transform: scale(2);
+                }
+                50% {
+                    border-radius: 0px;
+                    transform: rotateY(180deg) translateY(-100px);
+                    border-color: tomato;
+                    opacity: 0;
+                }
+                75% {
+                    transform: scale(5);
+                    border-radius: 20px;
+                }
+                100% {
+                    transform: rotateY(0);
                 }
             }
 
             img {
                 border: 1px solid black;
                 border-radius: 50%;
+                height: 50px;
+                width: 50px;
                 animation: coinFlip 5s ease-in-out infinite;
             }
         </style>
