--- a/KokoaTalk/home.html
+++ b/KokoaTalk/home.html
@@ -26,7 +26,7 @@
                     background-color: tomato;
                 }
             } */
-            @media screen and (min-width: 601px) and (max-width: 1200px) and (orientation: landscape) {
+            @media screen and (min-device-width: 601px) and (max-width: 1200px) and (orientation: landscape) {
                 .box {
                     background-color: wheat;
                 }
@@ -44,6 +44,12 @@
             @media screen and (orientation: landscape) {
                 span {
                     display: none;
+                }
+            }
+
+            @media print {
+                body {
+                    background-color: tomato;
                 }
             }
         </style>
