Sign Up Screen part Two

--- a/index.html
+++ b/index.html
@@ -24,6 +24,22 @@
                 <i class="fa-solid fa-bolt"></i>
             </div>
         </div>
+
+        <header class="welcome-header">
+            <h1 class="welcome-herder__title">Welcome to Kokoa Talk</h1>
+            <p class="welcome-header__text">
+                If you have Kokoa Account, log in with your email or phone
+                number
+            </p>
+        </header>
+
+        <form id="login-form">
+            <input type="text" placeholder="Email or phone number" />
+            <input type="password" placeholder="password" />
+            <input type="submit" value="Log In" />
+            <a href="#">Find Kokoa Account or Password</a>
+        </form>
+
         <script
             src="https://kit.fontawesome.com/75ea5a755a.js"
             crossorigin="anonymous"
