--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+        <link rel="stylesheet" href="css/styles.css" />
+
         <title>Welcome to Kokoa Talk</title>
     </head>
     <body>
-        <div id="status-bar">
+        <div class="status-bar">
             <div class="status-bar__column">
                 <span>No Service</span>
                 <!--Wifi Icon -->
@@ -19,7 +22,7 @@
             <div class="status-bar__column">
                 <span>100%</span>
                 <!-- Battery Icon -->
-                <i class="fa-solid fa-battery-full"></i>
+                <i class="fa-solid fa-battery-full fa-lg"></i>
                 <!-- Lightning Icon -->
                 <i class="fa-solid fa-bolt"></i>
             </div>
