Sign Up Screen part Three

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
 
         <header class="welcome-header">
-            <h1 class="welcome-herder__title">Welcome to Kokoa Talk</h1>
+            <h1 class="welcome-header__title">Welcome to Kokoa Talk</h1>
             <p class="welcome-header__text">
                 If you have Kokoa Account, log in with your email or phone
                 number
