--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <header class="welcome-header">
             <h1 class="welcome-header__title">Welcome to Kokoa Talk</h1>
             <p class="welcome-header__text">
-                If you have Kokoa Account, log in with your email or phone
-                number
+                If you have Kokoa Account, <br />
+                log in with your email or phone number.
             </p>
         </header>
 
@@ -40,6 +40,7 @@
             <input type="text" placeholder="Email or phone number" />
             <input type="password" placeholder="password" />
             <input type="submit" value="Log In" />
+            <input type="submit" value="Sign Up" />
             <a href="#">Find Kokoa Account or Password</a>
         </form>
 
