--- a/friends.html
+++ b/friends.html
@@ -1,1 +1,61 @@
-asdasdasd
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+        <link rel="stylesheet" href="css/styles.css" />
+
+        <title>Friends - Kokoa Talk</title>
+    </head>
+    <body>
+        <div class="status-bar">
+            <div class="status-bar__column">
+                <span>No Service</span>
+                <!--Wifi Icon -->
+                <i class="fa-solid fa-wifi"></i>
+            </div>
+            <div class="status-bar__column">
+                <span>18:43</span>
+            </div>
+            <div class="status-bar__column">
+                <span>100%</span>
+                <!-- Battery Icon -->
+                <i class="fa-solid fa-battery-full fa-lg"></i>
+                <!-- Lightning Icon -->
+                <i class="fa-solid fa-bolt"></i>
+            </div>
+        </div>
+
+        <nav class="nav">
+            <ul class="nav__list">
+                <li class="nav__btn">
+                    <a class="nav__link" href="friends.html"
+                        ><i class="fa-solid fa-user fa-lg"></i
+                    ></a>
+                </li>
+                <li class="nav__btn">
+                    <a class="nav__link" href="#"
+                        ><i class="fa-regular fa-comment fa-lg"></i
+                    ></a>
+                </li>
+                <li class="nav__btn">
+                    <a class="nav__link" href="#"
+                        ><i class="fa-solid fa-magnifying-glass fa-lg"></i
+                    ></a>
+                </li>
+                <li class="nav__btn">
+                    <a class="nav__link" href="#"
+                        ><i class="fas fa-ellipsis fa-lg"></i
+                    ></a>
+                </li>
+            </ul>
+        </nav>
+
+        <script
+            src="https://kit.fontawesome.com/75ea5a755a.js"
+            crossorigin="anonymous"
+        ></script>
+    </body>
+</html>
