--- a/friends.html
+++ b/friends.html
@@ -36,18 +36,20 @@
                     ></a>
                 </li>
                 <li class="nav__btn">
-                    <a class="nav__link" href="#"
+                    <a class="nav__link" href="#">
+                        <span class="nav__notofication">1</span
                         ><i class="fa-regular fa-comment fa-2x"></i
                     ></a>
                 </li>
                 <li class="nav__btn">
                     <a class="nav__link" href="#"
-                        ><i class="fa-solid fa-magnifying-glass fa-2x"></i
+                        ><i class="fa fa-magnifying-glass fa-2x"></i
                     ></a>
                 </li>
                 <li class="nav__btn">
-                    <a class="nav__link" href="#"
-                        ><i class="fas fa-ellipsis fa-2x"></i
+                    <a class="nav__link" href="#">
+                        <span class="nav__dot"></span>
+                        <i class="fas fa-ellipsis fa-2x"></i
                     ></a>
                 </li>
             </ul>
