--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                 <span>18:43</span>
             </div>
             <div class="status-bar__column">
-                <span>100%</span>
+                <span>21%</span>
                 <!-- Battery Icon -->
-                <i class="fa-solid fa-battery-full fa-lg"></i>
+                <i class="fa-solid fa-battery-quarter fa-lg"></i>
                 <!-- Lightning Icon -->
                 <i class="fa-solid fa-bolt"></i>
             </div>
