--- a/friends.html
+++ b/friends.html
@@ -17,16 +17,23 @@
                 <i class="fa-solid fa-wifi"></i>
             </div>
             <div class="status-bar__column">
-                <span>18:43</span>
+                <span>21:23</span>
             </div>
             <div class="status-bar__column">
                 <span>100%</span>
                 <!-- Battery Icon -->
                 <i class="fa-solid fa-battery-full fa-lg"></i>
-                <!-- Lightning Icon -->
-                <i class="fa-solid fa-bolt"></i>
             </div>
         </div>
+
+        <header class="screen-header">
+            <h1 class="screen-header__title">Friends</h1>
+            <div class="screen-header__icons">
+                <span><i class="fa fa-magnifying-glass fa-lg"></i></span>
+                <span><i class="fa-solid fa-music fa-lg"></i></span>
+                <span><i class="fa-solid fa-gear fa-lg"></i></span>
+            </div>
+        </header>
 
         <nav class="nav">
             <ul class="nav__list">
