--- a/friends.html
+++ b/friends.html
@@ -35,6 +35,12 @@
             </div>
         </header>
 
+        <a id="friends-display-link">
+            <i class="fa-solid fa-circle-info"></i>
+            <em> Friends' Names Display </em>
+            <i class="fa-solid fa-chevron-right"></i>
+        </a>
+
         <nav class="nav">
             <ul class="nav__list">
                 <li class="nav__btn">
