User Component part One

--- a/friends.html
+++ b/friends.html
@@ -41,6 +41,22 @@
             <i class="fa-solid fa-chevron-right"></i>
         </a>
 
+        <div class="user-component">
+            <div class="user-component__column">
+                <img
+                    src="https://avatars.githubusercontent.com/u/103757515"
+                    class="user-component__avatar"
+                />
+                <div class="user-component_text">
+                    <h4 class="user-component__title">Woong</h4>
+                    <h6 class="user-component__subtitle">
+                        Please check My Kokoa Account Info
+                    </h6>
+                </div>
+            </div>
+            <div class="user-component__column"></div>
+        </div>
+
         <nav class="nav">
             <ul class="nav__list">
                 <li class="nav__btn">
