--- a/friends.html
+++ b/friends.html
@@ -41,21 +41,46 @@
             <i class="fa-solid fa-chevron-right"></i>
         </a>
 
-        <div class="user-component">
-            <div class="user-component__column">
-                <img
-                    src="https://avatars.githubusercontent.com/u/103757515"
-                    class="user-component__avatar"
-                />
-                <div class="user-component_text">
-                    <h4 class="user-component__title">Woong</h4>
-                    <h6 class="user-component__subtitle">
-                        Please check My Kokoa Account Info
-                    </h6>
+        <main class="friends-screen">
+            <div class="user-component">
+                <div class="user-component__column">
+                    <img
+                        src="https://avatars.githubusercontent.com/u/103757515"
+                        class="user-component__avatar user-component__avatar--xl"
+                    />
+                    <div class="user-component_text">
+                        <h4 class="user-component__title">Woong</h4>
+                        <!-- <h6 class="user-component__subtitle">
+                            Please check My Kokoa Account Info
+                        </h6> -->
+                    </div>
+                </div>
+                <div class="user-component__column"></div>
+            </div>
+
+            <div class="friends-screen__channel">
+                <div class="friends-screen__channel-header">
+                    <span>Channel</span>
+                    <i class="fa-solid fa-chevron-up"></i>
+                </div>
+                <div class="user-component">
+                    <div class="user-component__column">
+                        <img
+                            src="https://avatars.githubusercontent.com/u/103757515"
+                            class="user-component__avatar user-component__avatar--sm"
+                        />
+                        <div class="user-component_text">
+                            <h4 class="user-component__title">Channel</h4>
+                        </div>
+                    </div>
+                    <div class="user-component__column">
+                        <span
+                            >2<i class="fa-solid fa-chevron-right faa=xs"></i
+                        ></span>
+                    </div>
                 </div>
             </div>
-            <div class="user-component__column"></div>
-        </div>
+        </main>
 
         <nav class="nav">
             <ul class="nav__list">
