--- a/friends.html
+++ b/friends.html
@@ -92,18 +92,18 @@
                     ></a>
                 </li>
                 <li class="nav__btn">
-                    <a class="nav__link" href="#">
+                    <a class="nav__link" href="chats.html">
                         <span class="nav__notofication">1</span
                         ><i class="fa-regular fa-comment fa-2x"></i
                     ></a>
                 </li>
                 <li class="nav__btn">
-                    <a class="nav__link" href="#"
+                    <a class="nav__link" href="find.html"
                         ><i class="fa fa-magnifying-glass fa-2x"></i
                     ></a>
                 </li>
                 <li class="nav__btn">
-                    <a class="nav__link" href="#">
+                    <a class="nav__link" href="more.html">
                         <span class="nav__dot"></span>
                         <i class="fas fa-ellipsis fa-2x"></i
                     ></a>
