Chats Screen part Two

--- a/friends.html
+++ b/friends.html
@@ -93,7 +93,7 @@
                 </li>
                 <li class="nav__btn">
                     <a class="nav__link" href="chats.html">
-                        <span class="nav__notofication">1</span
+                        <span class="nav__notofication badge">1</span
                         ><i class="fa-regular fa-comment fa-2x"></i
                     ></a>
                 </li>
