--- a/chats.html
+++ b/chats.html
@@ -44,13 +44,16 @@
                         class="user-component__avatar user-component__avatar"
                     />
                     <div class="user-component_text">
-                        <h4 class="user-component__title">Woong</h4>
+                        <h4 class="user-component__title--sm">KokoaTalk</h4>
                         <h6 class="user-component__subtitle">
                             Please check My Kokoa Account Info
                         </h6>
                     </div>
                 </div>
-                <div class="user-component__column"></div>
+                <div class="user-component__column--chats">
+                    <span class="user-component__time">21:22</span>
+                    <div class="badge">1</div>
+                </div>
             </div>
         </main>
 
@@ -63,7 +66,7 @@
                 </li>
                 <li class="nav__btn">
                     <a class="nav__link" href="chats.html">
-                        <span class="nav__notofication">1</span
+                        <span class="nav__notofication badge">1</span
                         ><i class="fa-solid fa-comment fa-2x"></i
                     ></a>
                 </li>
