Find Screen Part Two

--- a/find.html
+++ b/find.html
@@ -42,9 +42,12 @@
                 <div class="find-icons__icon">
                     <img src="image/QR Code.PNG" /><span>QR Code</span>
                 </div>
-                <div class="find-icons__icon">
-                    <img src="image/Contact Book.PNG" /><span
-                        >Add by Contacts</span
+                <div class="find-icons__icon find-icons__icon-contact">
+                    <img
+                        class="contact-img"
+                        src="image/Contact Book.PNG"
+                    /><span class="contact">
+                        <em> Add by </em> <br />Contacts</span
                     >
                 </div>
                 <div class="find-icons__icon">
@@ -53,6 +56,11 @@
                 <div class="find-icons__icon">
                     <img src="image/Invite.PNG" /><span>Invite</span>
                 </div>
+            </div>
+
+            <div class="recommended-friends">
+                <h6 class="recommended-friends__title">Recommended Friends</h6>
+                <span>You have no recommended friends.</span>
             </div>
         </main>
 
