--- a/find.html
+++ b/find.html
@@ -62,6 +62,31 @@
                 <h6 class="recommended-friends__title">Recommended Friends</h6>
                 <span>You have no recommended friends.</span>
             </div>
+            <div class="open-chat">
+                <div class="open-chat__header">
+                    <h4>Open Chat</h4>
+                    <span
+                        >Go to Openchat Home<i class="fas fa-chevron-right"></i
+                    ></span>
+                </div>
+                <div class="open-post">
+                    <div class="open-post__column">
+                        <h5 class="open-post__title">#BTS</h5>
+                        <h6 class="open-post__hashtags">#bts#army#friends</h6>
+                        <div class="open-post__members">
+                            <img
+                                src="https://images.unsplash.com/photo-1672274489122-8d20cb7caf60?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1332&q=80"
+                            />
+                            <span class="open-post__member-count"
+                                >802 members</span
+                            >
+                            <div class="divider"></div>
+                            <span class="open-post__member-status">Active</span>
+                        </div>
+                    </div>
+                    <div class="open-post__column"></div>
+                </div>
+            </div>
         </main>
 
         <nav class="nav">
