Find Screen Part Four

--- a/find.html
+++ b/find.html
@@ -70,21 +70,42 @@
                     ></span>
                 </div>
                 <div class="open-post">
-                    <div class="open-post__column">
-                        <h5 class="open-post__title">#BTS</h5>
-                        <h6 class="open-post__hashtags">#bts#army#friends</h6>
-                        <div class="open-post__members">
-                            <img
-                                src="https://images.unsplash.com/photo-1672274489122-8d20cb7caf60?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1332&q=80"
-                            />
-                            <span class="open-post__member-count"
-                                >802 members</span
-                            >
-                            <div class="divider"></div>
-                            <span class="open-post__member-status">Active</span>
+                    <div class="a">
+                        <div class="open-post__column-info">
+                            <h5 class="open-post__title">#BTS</h5>
+                            <h6 class="open-post__hashtags">
+                                #bts#army#friends
+                            </h6>
+                            <div class="open-post__members">
+                                <img
+                                    src="https://images.unsplash.com/photo-1672274489122-8d20cb7caf60?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1332&q=80"
+                                />
+                                <span class="open-post__member-count">
+                                    <div class="first">802</div>
+                                    <div class="second">members</div>
+                                </span>
+                                <div class="divider"></div>
+                                <span class="open-post__member-status"
+                                    >Active
+                                </span>
+                            </div>
                         </div>
                     </div>
-                    <div class="open-post__column"></div>
+                    <div class="open-post__column">
+                        <div class="open-post__photo">
+                            <img
+                                src="https://images.unsplash.com/photo-1671273976450-7d1944e5a2d1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=735&q=80"
+                            />
+                            <div class="open-post__heart-count">
+                                <div class="open-post__heart-element">
+                                    <i
+                                        class="fa-sharp fa-solid fa-heart fa-xs"
+                                    ></i>
+                                    <span>326</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </main>
