--- a/find.html
+++ b/find.html
@@ -69,7 +69,7 @@
                         >Go to Openchat Home<i class="fas fa-chevron-right"></i
                     ></span>
                 </div>
-                <div class="open-post">
+                <div class="open-post open-post__one">
                     <div class="a">
                         <div class="open-post__column-info">
                             <h5 class="open-post__title">#BTS</h5>
@@ -102,6 +102,47 @@
                                         class="fa-sharp fa-solid fa-heart fa-xs"
                                     ></i>
                                     <span>326</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="open-post open-post__two">
+                    <div class="a">
+                        <div class="open-post__column-info">
+                            <h5 class="open-post__title">#LOL</h5>
+                            <h6
+                                class="open-post__hashtags open-post__hashtags-two"
+                            >
+                                #League Of Legends#Game #together
+                            </h6>
+                            <div class="open-post__members">
+                                <img
+                                    src="https://images.contentstack.io/v3/assets/blt731acb42bb3d1659/blt524e8d284b48916d/627b70c3c5052c2f90c421cc/Notice_asset_LoL.jpg"
+                                />
+                                <span class="open-post__member-count">
+                                    <div class="first">532</div>
+                                    <div class="second">members</div>
+                                </span>
+                                <div class="divider"></div>
+                                <span class="open-post__member-status"
+                                    >Active
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="open-post__column">
+                        <div class="open-post__photo">
+                            <img
+                                src="https://www.kukinews.com/data/kuk/image/2020/11/26/kuk202011260451.680x.0.jpg"
+                            />
+                            <div class="open-post__heart-count">
+                                <div class="open-post__heart-element">
+                                    <i
+                                        class="fa-sharp fa-solid fa-heart fa-xs"
+                                    ></i>
+                                    <span>434</span>
                                 </div>
                             </div>
                         </div>
