More Screen part One

--- a/find.html
+++ b/find.html
@@ -38,11 +38,11 @@
         </header>
 
         <main class="main-screen">
-            <div class="find-icons">
-                <div class="find-icons__icon">
+            <div class="icon-row">
+                <div class="icon-row__icon">
                     <img src="image/QR Code.PNG" /><span>QR Code</span>
                 </div>
-                <div class="find-icons__icon find-icons__icon-contact">
+                <div class="icon-row__icon icon-row__icon-contact">
                     <img
                         class="contact-img"
                         src="image/Contact Book.PNG"
@@ -50,10 +50,10 @@
                         <em> Add by </em> <br />Contacts</span
                     >
                 </div>
-                <div class="find-icons__icon">
+                <div class="icon-row__icon">
                     <img src="image/ID.PNG" /><span>Add by ID</span>
                 </div>
-                <div class="find-icons__icon">
+                <div class="icon-row__icon">
                     <img src="image/Invite.PNG" /><span>Invite</span>
                 </div>
             </div>
