More Screen part Two

--- a/more.html
+++ b/more.html
@@ -96,26 +96,22 @@
                             >Kokoa Story</span
                         >
                     </div>
-                </div>
 
-                <div class="more-suggestions__icons">
                     <div class="more-suggestions__icon">
                         <div class="more-suggestions__icon-image">
-                            <img src="image/kokoa story.PNG" />
+                            <img src="image/kokoa friends.PNG" />
                         </div>
                         <span class="more-suggestions__icon-text"
-                            >Kokoa Story</span
+                            >Kokoa Friends</span
                         >
                     </div>
-                </div>
 
-                <div class="more-suggestions__icons">
                     <div class="more-suggestions__icon">
                         <div class="more-suggestions__icon-image">
-                            <img src="image/kokoa story.PNG" />
+                            <img src="image/friends game.PNG" />
                         </div>
                         <span class="more-suggestions__icon-text"
-                            >Kokoa Story</span
+                            >Friends Game</span
                         >
                     </div>
                 </div>
@@ -131,7 +127,7 @@
                 </li>
                 <li class="nav__btn">
                     <a class="nav__link" href="chats.html">
-                        <span class="nav__notofication badge">1</span
+                        <span class="nav__notofication"></span
                         ><i class="fa-regular fa-comment fa-2x"></i
                     ></a>
                 </li>
