--- a/chats.html
+++ b/chats.html
@@ -32,7 +32,10 @@
                 <span><i class="fa fa-magnifying-glass fa-lg"></i></span>
                 <span><i class="fa-regular fa-comment-dots fa-lg"></i></span>
                 <span><i class="fa-solid fa-music fa-lg"></i></span>
-                <span><i class="fa-solid fa-gear fa-lg"></i></span>
+                <span
+                    ><a href="settings.html">
+                        <i class="fa-solid fa-gear fa-lg"></i></a
+                ></span>
             </div>
         </header>
 
