--- a/find.html
+++ b/find.html
@@ -30,8 +30,10 @@
             <h1 class="screen-header__title">Find</h1>
             <div class="screen-header__icons">
                 <span><i class="fa fa-magnifying-glass fa-lg"></i></span>
-                <span
-                    ><i class="fa-solid fa-gear fa-lg"></i>
+                <span>
+                    <a href="settings.html">
+                        <i class="fa-solid fa-gear fa-lg"></i
+                    ></a>
                     <div class="point"></div>
                 </span>
             </div>
