--- a/friends.html
+++ b/friends.html
@@ -31,7 +31,10 @@
             <div class="screen-header__icons">
                 <span><i class="fa fa-magnifying-glass fa-lg"></i></span>
                 <span><i class="fa-solid fa-music fa-lg"></i></span>
-                <span><i class="fa-solid fa-gear fa-lg"></i></span>
+                <span
+                    ><a href="settings.html">
+                        <i class="fa-solid fa-gear fa-lg"></i></a
+                ></span>
             </div>
         </header>
 
