--- a/more.html
+++ b/more.html
@@ -31,8 +31,10 @@
             <div class="screen-header__icons">
                 <span><i class="fa fa-magnifying-glass fa-lg"></i></span>
                 <span><i class="fa-solid fa-music fa-lg"></i></span>
-                <span
-                    ><i class="fa-solid fa-gear fa-lg"></i>
+                <span>
+                    <a href="settings.html">
+                        <i class="fa-solid fa-gear fa-lg"></i
+                    ></a>
                     <div class="point"></div>
                 </span>
             </div>
