Settings Screen Part One

--- a/find.html
+++ b/find.html
@@ -42,21 +42,23 @@
         <main class="main-screen">
             <div class="icon-row">
                 <div class="icon-row__icon">
-                    <img src="image/QR Code.PNG" /><span>QR Code</span>
+                    <img src="image/Find Page/QR Code.PNG" /><span
+                        >QR Code</span
+                    >
                 </div>
                 <div class="icon-row__icon icon-row__icon-contact">
                     <img
                         class="contact-img"
-                        src="image/Contact Book.PNG"
+                        src="image/Find Page/Contact Book.PNG"
                     /><span class="contact">
                         <em> Add by </em> <br />Contacts</span
                     >
                 </div>
                 <div class="icon-row__icon">
-                    <img src="image/ID.PNG" /><span>Add by ID</span>
+                    <img src="image/Find Page/ID.PNG" /><span>Add by ID</span>
                 </div>
                 <div class="icon-row__icon">
-                    <img src="image/Invite.PNG" /><span>Invite</span>
+                    <img src="image/Find Page/Invite.PNG" /><span>Invite</span>
                 </div>
             </div>
 
