--- a/more.html
+++ b/more.html
@@ -58,32 +58,38 @@
                     </div>
                 </div>
                 <div class="user-component__column-message">
-                    <img src="image/Comment.PNG" />
+                    <img src="image/More Page/Comment.PNG" />
                 </div>
             </div>
 
             <div class="icon-row__more">
                 <div class="icon-row__icon__more ia">
-                    <img src="image/Calendar.PNG" /><span>Calendar</span>
+                    <img src="image/More Page/Calendar.PNG" /><span
+                        >Calendar</span
+                    >
                 </div>
                 <div class="icon-row__icon__more ib">
                     <div class="dot"></div>
-                    <img src="image/Talk Drive.PNG" />
+                    <img src="image/More Page/Talk Drive.PNG" />
                     <span>Talk Drive</span>
                 </div>
                 <div class="icon-row__icon__more ic">
-                    <img src="image/Emoticons.PNG" /><span
+                    <img src="image/More Page/Emoticons.PNG" /><span
                         ><em>Emoticons</em></span
                     >
                 </div>
                 <div class="icon-row__icon__more id">
-                    <img src="image/Themes.PNG" /><span>Themes</span>
+                    <img src="image/More Page/Themes.PNG" /><span>Themes</span>
                 </div>
                 <div class="icon-row__icon__more ie">
-                    <img src="image/Account.PNG" /><span>Account</span>
+                    <img src="image/More Page/Account.PNG" /><span
+                        >Account</span
+                    >
                 </div>
                 <div class="icon-row__icon__more if">
-                    <img src="image/Openchat.PNG" /><span>Openchat</span>
+                    <img src="image/More Page/Openchat.PNG" /><span
+                        >Openchat</span
+                    >
                 </div>
             </div>
 
@@ -92,7 +98,7 @@
                 <div class="more-suggestions__icons">
                     <div class="more-suggestions__icon">
                         <div class="more-suggestions__icon-image">
-                            <img src="image/kokoa story.PNG" />
+                            <img src="image/More Page/kokoa story.PNG" />
                         </div>
                         <span class="more-suggestions__icon-text"
                             >Kokoa Story</span
@@ -101,7 +107,7 @@
 
                     <div class="more-suggestions__icon">
                         <div class="more-suggestions__icon-image">
-                            <img src="image/kokoa friends.PNG" />
+                            <img src="image/More Page/kokoa friends.PNG" />
                         </div>
                         <span class="more-suggestions__icon-text"
                             >Kokoa Friends</span
@@ -110,7 +116,7 @@
 
                     <div class="more-suggestions__icon">
                         <div class="more-suggestions__icon-image">
-                            <img src="image/friends game.PNG" />
+                            <img src="image/More Page/friends game.PNG" />
                         </div>
                         <span class="more-suggestions__icon-text"
                             >Friends Game</span
