--- a/settings.html
+++ b/settings.html
@@ -26,7 +26,34 @@
             </div>
         </div>
 
-        <main class="main-screen"></main>
+        <header class="alt-header">
+            <div class="alt-header__column">
+                <i class="fa-solid fa-chevron-left"></i>
+            </div>
+            <div class="alt-header__column">
+                <h1 class="alt-header__title">Settings</h1>
+            </div>
+            <div class="alt-header__column">
+                <i class="fa fa-magnifying-glass"></i>
+            </div>
+        </header>
+
+        <main class="main-screen">
+            <ul class="settings-list">
+                <li class="settings__setting">
+                    <img src="image/Setting Page/Notices.PNG" />
+                    <span>Notices</span>
+                </li>
+                <li class="settings__setting">
+                    <img src="image/Setting Page/Kokoa Lab.PNG" />
+                    <span>Kokoa Lab</span>
+                </li>
+                <li class="settings__setting">
+                    <img src="image/Setting Page/Version.PNG" />
+                    <span>Version</span>
+                </li>
+            </ul>
+        </main>
 
         <nav class="nav">
             <ul class="nav__list">
